2008/03/04
	
	22. Added methods to control implementation behavior in CjrlDynamicRobot:
	  - virtual bool isSupported(const std::string &inProperty) = 0;
	  - virtual bool getProperty(const std::string &inProperty, std::string& outValue) = 0;
	  - virtual bool setProperty(std::string &inProperty, const std::string& inValue) = 0; 
	Augmented documentation accordingly: a new page lists the recommended 
	commands to be implemented.

	
2008/02/19

	21. Added method setJointOrderInConfig in CjrlDynamicRobot.
	
jrl-dynamics version 1.8 released February 16, 2008

	20. Added rightHand() and lefHand() methods to CjrlHumanoidDynamicRobot
	19. Added documentation about specification of CjrlJoint.
	18. Moved dependence to MatrixAbstractionLayer to implementation.
	
jrl-dynamics version 1.7 released November 8, 2007

	17. Replace get function
	      virtual void gaze(const vector3d& outDirection,
				const vector3d& outOrigin) const = 0;
	    by a set function
	      virtual void gaze(const vector3d& inDirection,
				const vector3d& inOrigin) = 0;
	    that was missing.
	16. Added some methods in CjrlJoint to set and get the bounds on
	the degrees of freedom of a joint.
	15. CjrlHumanoidDynamicRobot now virtually inherits from
	CjrlDynamicRobot in order to enable implementations of these
	classes to inherit from one another.
	14. Added method  bool initialize() in CjrlDynamicRobot in order
	to initialize data-structure relative to dynamic computation once
	the kinematic tree is built.
	
jrl-dynamics version 1.6 released August 30, 2007

	13. Remove const in addChildJoint (const CjrlJoint& inJoint) in
	order to be able to modify joints in kinematic chain.
	12. CjrlJoint::parentJoint() and CjrlJoint::childJoint(unsigned
	int inJointRank) return pointer to CjrlJoint instead of
	reference.
	11. Added information for developers of implementation of abstract interface.
	
jrl-dynamics version 1.5 released July 16, 2007
	