@@ -1,3 +1,5 @@
+2008/03/11
+	23. Added recommended commands in dedicated page. 
 2008/03/04
 	
 	22. Added methods to control implementation behavior in CjrlDynamicRobot:
